--- a/src/blocks/block-heading/styles/style.scss
+++ b/src/blocks/block-heading/styles/style.scss
@@ -6,6 +6,7 @@
 .c9-heading {
 	font-size: 10px;
 	margin-bottom: 1.2em;
+	display: block;
 }
 
 .c9-heading h1,
